--- a/Sprint-2/programas/analisis_estadistico.ipynb
+++ b/Sprint-2/programas/analisis_estadistico.ipynb
@@ -630,6 +630,36 @@
       "source": [
         "---\n",
         "\n",
+        "## 💡 Visualización Interactiva\n",
+        "\n",
+        "Los datos de este análisis también están disponibles en plataformas interactivas:\n",
+        "\n",
+        "### 📊 Dashboard Power BI Desktop\n",
+        "\n",
+        "Accede a un dashboard profesional con visualizaciones interactivas y filtros dinámicos:\n",
+        "- **Ubicación**: `Sprint-2/Tienda_Aurelion_Dashboard_Sprint2.pbix` o `.pbit`\n",
+        "- **Guía**: `Sprint-2/documentacion/GUIA_RAPIDA_DASHBOARD_POWERBI.md`\n",
+        "- **Requisito**: Microsoft Power BI Desktop (gratis)\n",
+        "\n",
+        "### 🌐 Aplicación Web Streamlit\n",
+        "\n",
+        "Explora los datos en una aplicación web interactiva:\n",
+        "```bash\n",
+        "# Ejecuta desde la carpeta Sprint-2/\n",
+        "streamlit run programas/app_streamlit.py\n",
+        "```\n",
+        "\n",
+        "**Ambas herramientas complementan este análisis con visualizaciones interactivas y funcionalidades adicionales.**\n",
+        "\n",
+        "---\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "---\n",
+        "\n",
         "## 📝 Interpretación de Resultados Orientada al Problema\n",
         "\n",
         "### Conclusiones Principales:\n",
